--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="/">
-                <img src="./favicon/android-chrome-512x512.png" alt="U3Adimn.org.au" height="32">
+                <img src="./favicon/android-chrome-512x512.png" alt="Home" height="32">
                 U3Admin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -173,7 +173,7 @@
                                                 for one of our U3A groups...
                                             </p>
                                             <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                                                    src="../assets/img/reliable-email.png" alt="Admin website example">
+                                                    src="../assets/img/reliable-email.png" alt="Reliable email">
                                             </div>
                                             </p>
                                         </li>
@@ -465,9 +465,26 @@
                             </div>
                         </div>
 
+                        <div class="card">
+                            <div class="card-header" id="headingSeven">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link-secondary w-100 text-start collapsed"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false"
+                                        aria-controls="collapseSeven">
+                                        Where is my bank account &amp; credit card details stored?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven"
+                                data-bs-parent="#accordion">
+                                <div class="card-body">
+                                    <p>We do not store your bank account or credit card details. Never, ever.</p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-
             </div>
         </div>
         </div>
