--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top">
-                <img src="./favicon/android-chrome-512x512.png" alt="..." height="32">
+                <img src="./favicon/android-chrome-512x512.png" alt="Home" height="32">
                 U3Admin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -153,7 +153,8 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">We've got what you need!</h2>
+                    <h1 class="text-white mt-0">Your search is over</h1>
+                    <h6 class="text-white mt-0">We've got what you need!</h6>
                     <hr class="divider divider-light" />
                     <svg class="text-white" xmlns="http://www.w3.org/2000/svg" width="48" height="48"
                         fill="currentColor" class="bi bi-cup-hot" viewBox="0 0 16 16">
@@ -290,7 +291,7 @@
             <div class="row g-0">
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/iphone.png" title="Member Portal Menu">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/iphone.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/iphone.png" alt="Member Portal Menu" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">Menu</div>
@@ -300,7 +301,7 @@
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/member-details.png"
                         title="Member Details">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/member-details.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/member-details.png" alt="Member Details" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">Member details entry</div>
@@ -309,7 +310,7 @@
                 </div>
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/fees.png" title="Fee Payment">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/fees.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/fees.png" alt="Fee payment" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">Pay member fees</div>
@@ -318,7 +319,7 @@
                 </div>
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/view.png" title="View Enrolments">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/view.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/view.png" alt="View enrolments" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">View Enrolments</div>
@@ -327,7 +328,7 @@
                 </div>
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/Choose.png" title="Add Enrolment">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Choose.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Choose.png" alt="Add enrolment" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">Add Enrolment</div>
@@ -336,7 +337,7 @@
                 </div>
                 <div class="col-lg-2 col-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/whatson.png" title="What's on today">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/whatson.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/whatson.png" alt="What's on today" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Member Portal</div>
                             <div class="project-name">What's on today</div>
