--- a/u3a-software.html
+++ b/u3a-software.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="/">
-                <img src="./favicon/android-chrome-512x512.png" alt="U3Adimn.org.au" height="32">
+                <img src="./favicon/android-chrome-512x512.png" alt="Home" height="32">
                 U3Admin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -96,7 +96,7 @@
             <div class="justify-content-center">
                 <div class="text-left">
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid" src="../assets/img/lady-lq.jpg"
-                            alt="Admin website example"></div>
+                            alt="Our U3A hero"></div>
                 </div>
                 <p class="pt-4">
                     Finding the right software for your U3A is no easy task.
@@ -168,7 +168,7 @@
                     Below is a graph of a typical 30 day period for one of our U3A's...
                 </p>
                 <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                        src="../assets/img/reliable-email.png" alt="Admin website example">
+                        src="../assets/img/reliable-email.png" alt="Reliable email">
                 </div>
                 <p>That's impressive!</p>
 
@@ -217,7 +217,7 @@
                 <figure>
                     <figcaption class="h6">Class schedule</figcaption>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid" src="../assets/img/schedule.png"
-                            alt="Course schedule">
+                            alt="Class schedule">
                     </div>
                 </figure>
 
@@ -227,7 +227,7 @@
                 <figure>
                     <figcaption class="h6">Class schedule report</figcaption>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                            src="../assets/img/class-schedule-report.png" alt="Class schedule">
+                            src="../assets/img/class-schedule-report.png" alt="Class schedule report">
                     </div>
                 </figure>
 
@@ -255,7 +255,7 @@
                 </p>
                 <figure>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                            src="../assets/img/attendance-report.png" alt="Class schedule">
+                            src="../assets/img/attendance-report.png" alt="Attendance report">
                     </div>
                 </figure>
 
