--- a/u3a-member-portal.html
+++ b/u3a-member-portal.html
@@ -76,7 +76,7 @@
         // 
         e = document.getElementById("menu-link-2");
         a = document.createElement('a');
-        a.href = "u3a-software.html";
+        a.href = "u3a-software-introduction.html";
         a.innerHTML = "Introduction";
         a.classList.add("nav-link");
         e.appendChild(a);
