--- a/u3a-software.html
+++ b/u3a-software.html
@@ -115,7 +115,7 @@
                             Our Software
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="u3a-software.html">Introduction</a></li>
+                          <li><a class="dropdown-item" href="u3a-software-introduction.html">Introduction</a></li>
                           <li><a class="dropdown-item" href="u3a-administration-software.html">U3A Administration Website</a></li>
                           <li><a class="dropdown-item" href="u3a-member-portal.html">U3A Member Portal</a></li>
                         </ul>
