--- a/faq.html
+++ b/faq.html
@@ -460,7 +460,7 @@
                             <div id="collapseSix" class="collapse" aria-labelledby="headingSix"
                                 data-bs-parent="#accordion">
                                 <div class="card-body">
-                                    <p>We do not store your password. Never, ever.</p>
+                                    <p>We do not store any password created by you. Never, ever.</p>
                                 </div>
                             </div>
                         </div>
