--- a/sitemap/sitemap.html
+++ b/sitemap/sitemap.html
@@ -123,7 +123,7 @@ Total pages: 5</span>
 
             <li class="lhead">/  <span class="lcount">5 pages</span></li>
             
-<li class="lpage"><a href="https://u3admin.org.au/u3a-software.html" title="U3A Administration Software">U3A Administration Software</a></li>
+<li class="lpage"><a href="https://u3admin.org.au/" title="U3A Administration Software">U3A Administration Software</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-software-introduction.html" title="U3Admin - An introduction">U3Admin - An introduction</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-administration-software.html" title="U3Admin Administration Website">U3Admin Administration Website</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-member-portal.html" title="U3A Member Portal">U3A Member Portal</a></li>
