--- a/sitemap/sitemap.html
+++ b/sitemap/sitemap.html
@@ -114,20 +114,28 @@
 	<div id="top">
 		<nav>u3admin.org.au HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2023, September 10<br />
+<span>Last updated: 2023, September 11<br />
 Total pages: 5</span>
-<a href="https://u3admin.org.au">u3admin.org.au Homepage</a>
+<a href="http://u3admin.org.au">u3admin.org.au Homepage</a>
 </h3></div>
 	<div id="cont">
 		<ul class="level-0">
 
-            <li class="lhead">/  <span class="lcount">5 pages</span></li>
+            <li class="lhead">https:/ </li>
+            <li><ul class="level-1">
+
+            <li class="lhead">/ </li>
+            <li><ul class="level-2">
+
+            <li class="lhead">u3admin.org.au/  <span class="lcount">5 pages</span></li>
             
 <li class="lpage"><a href="https://u3admin.org.au/" title="U3A Administration Software">U3A Administration Software</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-software-introduction.html" title="U3Admin - An introduction">U3Admin - An introduction</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-administration-software.html" title="U3Admin Administration Website">U3Admin Administration Website</a></li>
 <li class="lpage"><a href="https://u3admin.org.au/u3a-member-portal.html" title="U3A Member Portal">U3A Member Portal</a></li>
 <li class="lpage last-page"><a href="https://u3admin.org.au/faq.html" title="Frequently Asked Questions">Frequently Asked Questions</a></li>
+</ul></li>
+</ul></li>
 </ul>
 		<!--
 Please note:
