--- a/index.html
+++ b/index.html
@@ -359,12 +359,8 @@
                     <h2 class="text-white mt-0">Our valued clients</h2>
                     <p class="text-white-75 mt-4">A small but growing, happy user base.<br />Click a U3A to view.</p>
                     <hr class="divider divider-light" />
-                    <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://eastlakes.u3anet.org.au/">Eastlakes
-                            U3A Inc</a></p>
-                    <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://lakemacquarie.u3anet.org.au/">Lake
-                            Macquarie U3A Inc</a></p>
-                    <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://newcastle.u3anet.org.au/">Newcastle
-                            U3A Inc</a></p>
+                    <!-- retrieve tenant info -->
+                    <div id="clientList"></div>
                 </div>
             </div>
         </div>
