tenant list in member portal

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <p class="text-white-75 mt-4">A small but growing, happy user base.<br />Click a U3A to view.</p>
                     <hr class="divider divider-light" />
                     <!-- retrieve tenant info -->
-                    <div id="clientList"></div>
+                    <div id="clientList"><p class="mt-4">Retrieving client list ... please wait</p></div>
                 </div>
             </div>
         </div>
