--- a/faq.html
+++ b/faq.html
@@ -362,7 +362,7 @@
                                                 suitable.
                                                 These are devices that are now more than 5 years of age and
                                                 unfortunately, Apple
-                                                does not update it's Safari browser on these older devices.
+                                                does not update its Safari browser on these older devices.
                                                 Apple iOS devices version greater than 12.5 have no problems.
                                             </p>
                                             <p>We are using
@@ -382,7 +382,7 @@
                                         </li>
                                         <li>
                                             <p>
-                                                Our <em>Administration website</em> also allows an authorised person to
+                                                Our <em>Administration Website</em> also allows an authorised person to
                                                 process online
                                                 payments on behalf of members. It allows office staff for example, to
                                                 process membership
@@ -471,14 +471,14 @@
                                     <button class="btn btn-link-secondary w-100 text-start collapsed"
                                         data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false"
                                         aria-controls="collapseSeven">
-                                        Where is my bank account &amp; credit card details stored?
+                                        Where is my bank account &amp; credit/debit card details stored?
                                     </button>
                                 </h5>
                             </div>
                             <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven"
                                 data-bs-parent="#accordion">
                                 <div class="card-body">
-                                    <p>We do not store your bank account or credit card details. Never, ever.</p>
+                                    <p>We do not store your bank account or credit/debit card details. Never, ever.</p>
                                 </div>
                             </div>
                         </div>
