--- a/u3a-administration-software.html
+++ b/u3a-administration-software.html
@@ -104,7 +104,7 @@
                         into the site
                         and has been assigned one or more administrative roles by the system administrator.
                     <p>
-                    <p>The administration website contains all the procedures necessary to administer and mange your
+                    <p>The administration Website contains all the procedures necessary to administer and mange your
                         membership register,
                         course and class definition, student enrolment and class attendance.
                     </p>
