--- a/u3a-software-introduction.html
+++ b/u3a-software-introduction.html
@@ -104,7 +104,7 @@
                     sufficient for your needs yet able to grow into the future,
                     affordable but not cheap,
                     and supportive when you need help. Importantly, it must be designed for
-                    a U3A, not something cobbled together from another industry.
+                    U3A, not something cobbled together from another industry.
                 </p>
                 <p>
                     We think that by finding our website your search may be over! Here's what we have to offer...
@@ -147,7 +147,7 @@
                 <p>Importantly, this is what <strong>we do not</strong> record...</p>
                 <uL>
                     <li>Bank account details</li>
-                    <li>Credit card numbers</li>
+                    <li>Credit/debit card numbers</li>
                     <li>Passwords</li>
                 </uL>
                 <p>Finally, when this information is no longer required then we delete it.</p>
@@ -165,7 +165,7 @@
                     their email when they register into our system.
                 </p>
                 <p>We do email right meaning 99.9% of your email correspondence will be received by your members.
-                    Below is a graph of a typical 30 day period for one of our U3A's...
+                    Below is a graph of a typical 30 day period for one of our U3As...
                 </p>
                 <div class="border border-5 rounded mx-auto"><img class="img-fluid"
                         src="../assets/img/reliable-email.png" alt="Reliable email">
@@ -179,7 +179,7 @@
                 <p>We use the <a href="https://eway.com.au/">Eway online payments system</a> to process new member
                     payments and member renewals.</p>
                 <p>Eway offers a secure and reliable online payment gateway that accepts all major
-                    forms of credit card. Importantly, Eway is an Australian company governed by Australian law
+                    forms of credit/debit card. Importantly, Eway is an Australian company governed by Australian law
                     and boasts local Australian support.</p>
                 <p>We can also process payments made by members directly from their bank account. However, the online
                     payments system is preferred as the transaction is completed in real time, it is far more accurate
@@ -221,7 +221,7 @@
                     </div>
                 </figure>
 
-                <p>And, when you're done we produce a great easy to read class schedule with enrolment / waitlist
+                <p>When you're done we produce a great easy to read class schedule with enrolment / waitlist
                     statistics that are always up to date.</p>
 
                 <figure>
@@ -237,7 +237,7 @@
                 </div>
                 <p>
                     Yes, we know there's a bit of controversy in U3A-land as to whether or not attendance
-                    should be recorded. That's why its completely optional.
+                    should be recorded. That's why it's completely optional.
                 </p>
                 <p>
                     If you do decide to record attendance we have some tools to make it easier via the
@@ -266,7 +266,7 @@
                 <p>
                     There is one and only one database of information.
                     Eliminate multiple spreadsheets, duplication and redundant data
-                    - after all its just a security risk.
+                    - after all it's just a security risk.
                 </p>
 
                 <div id="secure-by-default" class="alert alert-secondary alert-secondary d-flex align-items-center"> <span
