--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">Administration website</h3>
+                        <h3 class="h4 mb-2">Administration Website</h3>
                         <p class="text-muted mb-0">Need to add a new course, change a class time, review statistics or
                             run a report?</p>
                         <p class="text-muted mb-0">With contextual help a click away, our administration website
