--- a/u3a-member-portal.html
+++ b/u3a-member-portal.html
@@ -451,7 +451,7 @@
                                             <button class="btn btn-link-secondary w-100 text-start"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                                 aria-expanded="true" aria-controls="collapseThree">
-                                                Do I have to pay fees by credit card?
+                                                Do I have to pay fees by credit/debit card?
                                             </button>
                                         </h5>
                                     </div>
@@ -483,7 +483,7 @@
                                                 <li>The entire process occurs within the app. You do not have to
                                                     switch to your banking app to make the payment.
                                                 </li>
-                                                <li>Many U3A's will not accept cash and cheques are <em>sooo</em> last
+                                                <li>Many U3As will not accept cash and cheques are <em>sooo</em> last
                                                     century!</li>
                                             </ul>
                                         </div>
