Changed U3A Name to U3A Group

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                         <!-- U3A Name-->
                         <div class="form-floating mb-3">
                             <input class="form-control" name="u3a" Title="U3A" type="text" required />
-                            <label for="u3a">Your U3A Name</label>
+                            <label for="u3a">Your U3A Group</label>
                         </div>
                         <!-- Message input-->
                         <div class="form-floating mb-3">
