Imporved titles on input fields

--- a/index.html
+++ b/index.html
@@ -388,27 +388,27 @@
                     <form id="contactForm" name="contactForm">
                         <!-- Name input-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="name" Title="Name" type="text" required />
+                            <input class="form-control" name="name" Title="Enter your full name" type="text" required />
                             <label for="name">Full name</label>
                         </div>
                         <!-- Email address input-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="email" Title="Email" type="email" required />
+                            <input class="form-control" name="email" Title="Enter your email address" type="email" required />
                             <label for="email">Email address</label>
                         </div>
                         <!-- Phone number-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="phone" Title="Phone" type="phone" />
-                            <label for="email">Phone (optional)</label>
+                            <input class="form-control" name="phone" Title="Optionally, enter your phone number" type="phone" />
+                            <label for="phone">Phone (optional)</label>
                         </div>
                         <!-- U3A Name-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="u3a" Title="U3A" type="text" required />
+                            <input class="form-control" name="u3a" Title="Enter the name of the U3A group for whom you are making this inquiry" type="text" required />
                             <label for="u3a">Your U3A Group</label>
                         </div>
                         <!-- Message input-->
                         <div class="form-floating mb-3">
-                            <textarea id="message" class="form-control textarea-height" name="message" Title="message"
+                            <textarea id="message" class="form-control textarea-height" name="message" Title="Optionally, provide some detail of your requirements."
                                 type="text" style="height: 10rem"></textarea>
                             <label for="message">Additional Details (optional)</label>
                         </div>
