--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         new membership, membership renewal, online fee payment, course enrolment, class attendance,
                         reliable member email and much more.</p>
                     <p class="text-white-75 mb-4">No, not one cup per member.<br/>
-                        That's one cup of coffee, total. No strings attached!</p>
+                        That's one cup of coffee per month, total. No strings attached!</p>
                     <p class="text-white-75 mb-4">Interested? Let's explore further.</p>
                     <a class="mt-4 btn btn-light btn-xl" href="#difference">Get Started!</a>
                 </div>
